--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
 <link rel="stylesheet" href="css/aos.css">
 <link rel="stylesheet" href="css/style.css">
-<title>Justice Free HTML Template by zyenexllc</title>
+<title>Justice Free HTML Template by zyenexllcllc</title>
 </head>
 <body>
 <div class="lines-wrap">
@@ -72,7 +72,7 @@
 <div class="col-md-5 ml-auto">
 <div class="intro">
 <h1 class="mb-4" data-aos="fade-left" data-aos-delay="100"><strong class="text-primary">We Fight</strong> For Your Right</h1>
-<div class="intro-desc" data-aos="fade-left" data-aos-delay="200"><p class="mb-4">Another cool free template by the fine folks at <a href="https://zyenex/" target="_blank">zyenex</a>.</p>
+<div class="intro-desc" data-aos="fade-left" data-aos-delay="200"><p class="mb-4">Another cool free template by the fine folks at <a href="https://zyenexllc/" target="_blank">zyenexllc</a>.</p>
 <p><a href="#" class="btn btn-primary">Free Consultation</a></p>
 
 </div>
@@ -438,7 +438,7 @@ Separated they live in Bookmarksgrove right at the coast of the Semantics, a lar
 <div class="col-12 text-center">
 <p>
 
-Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://zyenex.com" target="_blank">zyenex</a>
+Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://zyenexllc.com" target="_blank">zyenexllc</a>
 </p>
 </div>
 </div>
