--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
 <link rel="stylesheet" href="css/aos.css">
 <link rel="stylesheet" href="css/style.css">
-<title>Justice Free HTML Template by zyenexllcllc</title>
+<title>Justice Free HTML Template by zyenexllc</title>
 </head>
 <body>
 <div class="lines-wrap">
