--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
 <nav class="site-nav dark mb-5">
 <div class="container">
 <div class="site-navigation">
-<a href="index.html" class="logo m-0">Justice<span class="text-primary">.</span></a>
+<a href="#" class="logo m-0">Justice<span class="text-primary">.</span></a>
 <ul class="js-clone-nav d-none d-lg-inline-block site-menu float-right">
-<li class="active"><a href="index.html">Home</a></li>
+<li class="active"><a href="#">Home</a></li>
 <li class="has-children">
-<a href="practice-areas.html">Practice Areas</a>
+<a href="#">Practice Areas</a>
 <ul class="dropdown">
-<li><a href="elements.html">Elements</a></li>
+<li><a href="#">Elements</a></li>
 <li class="has-children">
 <a href="#">Menu Two</a>
 <ul class="dropdown">
@@ -55,10 +55,10 @@
 <li><a href="#">Menu Three</a></li>
 </ul>
 </li>
-<li><a href="services.html">Services</a></li>
-<li><a href="attorneys.html">Attorneys</a></li>
-<li><a href="about.html">About</a></li>
-<li><a href="contact.html">Contact Us</a></li>
+<li><a href="#">Services</a></li>
+<li><a href="#">Attorneys</a></li>
+<li><a href="#">About</a></li>
+<li><a href="#">Contact Us</a></li>
 </ul>
 <a href="#" class="burger ml-auto float-right site-menu-toggle js-menu-toggle d-inline-block d-lg-none" data-toggle="collapse" data-target="#main-navbar">
 <span></span>
@@ -130,7 +130,7 @@ Criminal Law
 </div>
 </a>
 <p class="pl-3 mt-5" data-aos="fade-left" data-aos-delay="200">
-<a href="practice-areas.html" class="more">
+<a href="#" class="more">
 More Practice Areas <span class="icon-arrow_forward"></span>
 </a>
 </p>
